syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.maptest1";
option java_outer_classname = "MapTestProto";
option objc_class_prefix = "LRC"; // 定义生成文件的前缀

package com.lliuruichao.maptest1;

service MapTestService1 {
    rpc getRoles(MapReqst) returns (MapReply) {}
}

message MapRequest {
    string name = 1;
}

message MapReply {
    map<string, string> map = 1;
}